This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0

Any uppercase BUG_* names are modernish shell bug IDs.

2022-06-12:

- The POSIX mode now disables zero-padding of seconds in 'time'/'times' output.

2022-06-09:

- The POSIX mode has been amended to use a UNIX pipe(2) instead of a
  socketpair(2) to connect commands in a pipeline, as the standard requires.
  (When reading directly from a pipeline in posix mode, the <#pattern and
  <##pattern redirection operators will not work and the -n option to the
  read built-in will not return early when reading from a slow device.)

- An interactive shell initialized in POSIX mode now once again has the
  preset aliases defined. This amends a change made on 2020-09-11.

- If a long-form shell option name is abbreviated so it matches multiple
  options, the error message from ksh or 'set' now reads "ambiguous option".

2022-06-08:

- If -B/--braceexpand is turned on in --posix mode, it now only allows brace
  expansion on literal strings and not on the values of unquoted expansions.
  This behaviour is like bash and zsh, as well as compliant with a future
  version of the POSIX standard that may specify brace expansion:
  https://www.austingroupbugs.net/view.php?id=1193

2022-06-07:

- Fixed a bug in 'typeset' where compound variables could acquire a spurious
  -x (export) attribute when printing their values, triggering other bugs.

2022-06-05:

- Fixed a bug where tab completion would spuriously execute a command
  substitution after entering: '`something<TAB> or generate a spurious
  'end of file unexpected' syntax error after entering: '$(something<TAB>.

- Fixed bug where tab completion stopped working for arguments following a
  quoted string with an escaped backslash in the form $'foo\'bar'.

2022-06-04:

- Added a new --functrace long-form shell option which causes the -x/--xtrace