@@ -3,6 +3,15 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-06-13:
+
+- Trapping a signal that is not a pseudosignal will now cause a virtual
+  subshell to fork into a real one. This ensures a persistent PID where
+  other processes can signal the subshell (the PID of a virtual subshell may
+  change as other commands cause it to fork), and fixes a bug where a signal
+  could not be correctly or effectively trapped in a subshell if the same
+  signal was also trapped in the main shell environment.
+
 2022-06-12:
 
 - The POSIX mode now disables zero-padding of seconds in 'time'/'times' output.
